<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AllCateogriesActivity"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_search_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_grotesque_black"
            android:padding="10dp"
            android:text="Categories"
            android:textAllCaps="true"
            android:textSize="30sp" />


        <RelativeLayout
            android:id="@+id/press_historicalPlaces"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:padding="25dp"
                    android:text="@string/HistoricalPlace"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/historical" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/press_parks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_background3">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/park" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/Parks"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/press_hotels"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/Hotels"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/hotel" />


            </RelativeLayout>



        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/press_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardElevation="8dp"
            tools:ignore="DuplicateIds">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_background4">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/library" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/library"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/press_parkings"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/Parking"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/parking" />

            </RelativeLayout>



        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/press_prayerRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#00000000"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/categories_background3">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/prayerroom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/PrayerRoom"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:id="@+id/press_supermarket"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_regular_italic"
                    android:padding="25dp"
                    android:text="@string/Supermarkets"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/supermarket" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>