<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserDashboardActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <!-- Menu icon and add icon -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/menu_icon" />

            <ImageView
                android:id="@+id/login_signup"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="6dp"
                android:onClick="callStartupScreens"
                android:padding="5dp"
                android:src="@drawable/add_missing_place_icon" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <!-- Logo Name Search Box -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/brandon_grotesque_black"
                        android:text="@string/logo_name"
                        android:textSize="24sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app_name"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:background="@color/white"
                        android:elevation="8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_search"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="278dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/search_text"
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeColor="@color/white"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/colorPrimary">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/search_place"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@drawable/search_icon" />

                        <!--                        <TextView-->
                        <!--                            android:layout_width="wrap_content"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_marginLeft="15dp"-->
                        <!--                            android:text="@string/search_text" />-->
                        <!--                        <ImageView-->
                        <!--                            android:layout_width="30dp"-->
                        <!--                            android:layout_height="30dp"-->
                        <!--                            android:layout_alignParentRight="true"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:layout_marginRight="15dp"-->
                        <!--                            android:src="@drawable/search_icon" />-->

                    </RelativeLayout>

                </RelativeLayout>

                <!-- Category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/card_cateogry_icon_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!-- All featured location -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="142dp"
                        android:layout_height="275dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:lineHeight="24sp"
                            android:text="@string/featured_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/featured_locations_description" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/colorPrimary" />

                </RelativeLayout>

                <!-- Category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:text="@string/categories"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                        <!--                        <TextView-->
                        <!--                            android:layout_width="wrap_content"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_alignParentRight="true"-->
                        <!--                            android:layout_centerVertical="true"-->
                        <!--                            android:text="@string/view_all" />-->


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>